--- a/messenger/install
+++ b/messenger/install
@@ -33,6 +33,7 @@ systemctl enable messenger-website
 
 rm /etc/nginx/sites-available/messenger
 ln -s $(pwd)/services/messenger.nginx /etc/nginx/sites-available/messenger
+rm /etc/nginx/sites-enabled/default
 rm /etc/nginx/sites-enabled/messenger
 ln -s $(pwd)/messenger.nginx /etc/nginx/sites-enabled/messenger
 
